test_nginx/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-oahs-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    #
    cert-manager.io/cluster-issuer: "test-my-cluster-issuer"
spec:
  ingressClassName: public
  tls:
    - hosts:
        # ドメイン記載
        - test.oahs.f5.si
      secretName: test-my-cluster-issuer-secret # cert-managerはこのシークレットに作成した証明書を格納する
  rules:
    - host: test.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-nginx-service
                port:
                  number: 80
